--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "start": "node index.js"
   },
+  "engines": {
+    "node": ">=16"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bn.js": "^5.2.1",
     "dotenv": "^16.3.1",
-    "ethers": "^6.7.1"
+    "ethers": "^6.8.0"
   }
 }
